--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,15 +12,12 @@ a {
 }
 
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+body {
+  background: rgb(245, 245, 245);
+  width: 100%;
+  height: 100%;
 }
