--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,61 @@
 .container{
- 
+ background-color: #fff;
+ position: fixed;
+ width: 200px;
+ height: 100%;
+ box-shadow: 3px 0px 6px 0px rgb(246,246,246,0.75);
+}
+.wrapper{
+  padding: 10px;
+  z-index: 1;
 }
 .logo{
-  
+  padding: 10px;
+  padding-left: 20px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
+}
+.wrapper>ul{
+  margin-top:20px ;
+  padding-left: 10px;
+  text-align: left;
+  display: flex;
+  gap:20px;
+  flex-direction: column;
+  font-size: 18px;
+  font-weight: bold;
+}
+.wrapper>ul>li{
+  list-style-type: none;
+  font-size: 20px;
+  text-decoration: none;
+  opacity: 0.6;
+}
+.wrapper>ul>li>a:hover{
+  color:darkgoldenrod;
+  font-size: 22px;
+  transition: 0.2s;
+}
+
+@media only screen and (max-width:768px){
+  .container{
+    width: 70px;
+  }
+  .logo>h2{
+    opacity: 0;
+  }
+  .logo{
+    background:url("../public/vercel.svg");
+    width: 60px;
+    height: 40px;
+    padding: 5px;
+    margin: 2px;
+  }
+  .wrapper>ul{
+    gap:5px;
+  }
+  .wrapper>ul>li>a{
+    opacity: 0;
+  }
 }
