--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-.container {
+.navcontainer {
   background-color: #fff;
   position: fixed;
   width: 200px;
@@ -39,7 +39,7 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .container {
+  .navcontainer {
     width: 70px;
   }
   .logo > h2 {
@@ -66,5 +66,32 @@
   display: flex;
   flex-wrap: wrap;
   margin-left: 200px;
-  background-color: rgb(255,255,255);
+  background: rgb(255,255,255);
 }
+
+.headwrapper{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.title{
+  margin-left: 40px;
+  
+}
+.title>h2{
+  color:black
+}
+.title>p{
+  color:black
+}
+.profile{
+  position: absolute;
+  right: 20px;
+}
+
+
+/* @media only screen and (max-width:768px){
+  .headcontainer{
+    width: 600px;
+  }
+} */
