--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -137,3 +137,29 @@
     width: 350px;
   }
 }
+
+.charts{
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
+.bar{
+  margin-left:10px ;
+}
+.circle{
+margin-left: 10px;
+}
+
+@media only screen and (max-width:768px) {
+  .charts{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+  }
+  .bar>h2{
+    text-align: center;
+    font-size: 22px;
+  }
+}
