--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -138,7 +138,7 @@
   }
 }
 
-.charts {
+/* .charts {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -180,4 +180,21 @@
     width: 300px;
     height: 300px;
   }
+} */
+
+.charts{
+  display:grid;
+  grid-template-columns: repeat(4,1fr);
+  margin-left: 40px;
+  gap: 40px;
+}
+.bar{
+  width: 300px;
+  height: 100px;
+  border-radius: 20px;
+  background-color: #fff;
+  box-shadow: 20px 0px 10px 5px rgb(246, 246, 246, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
